Voter blocked handling added
